<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:enabled="true"

        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/dora"
        android:title="@string/title_dashboard"
        android:enabled="true"
       />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/door"
        android:title="@string/title_notifications"
        android:enabled="true"
        />
    <item
        android:id="@+id/navigation_help"
        android:enabled="true"
        android:icon="@drawable/dora2"
        android:title="@string/help"

        />

</menu>
