<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homefrag"
    >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/back"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00F10909"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="30sp"

        android:textStyle="bold" />

    <ImageView
        android:id="@+id/dora_pic"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#004DFC0E"
        android:contentDescription="@string/dora"
        android:src="@drawable/nobita" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="horizontal"

        android:background="@color/mainsub"

        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/timemachine"
            android:contentDescription="@string/title_dashboard"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/title_dashboard"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:background="@color/colorAccent"

        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/anydoor"
            android:contentDescription="@string/title_notifications"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/title_notifications"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#FFC107"
        android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/help"
            android:src="@drawable/doraemon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:fontFamily="casual"

            android:text="@string/help"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
    </ScrollView>